# keep_screen_on

./: .gitmodules  Cargo.toml  LICENSE  README.md
keep_screen_on_app/: Cargo.toml
keep_screen_on_app/src/: main.rs  ui.rs
keep_screen_on_lib/: Cargo.toml
keep_screen_on_lib/src/: lib.rs  linux_impl.rs
src/: lib.rs  linux_impl.rs  logic.rs  main.rs  timer.rs  ui.rs  windows_impl.rs
