[package]
name = "keep_screen_on_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
keep_screen_on_lib = { version = "0.1.0", path = "../keep_screen_on_lib" }
tray-menu = "0.1.2"

[target.x86_64-unknown-linux-gnu.features]
tray-menu = "gtk"
