[package]
name = "keep_screen_on_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"

[target.x86_64-unknown-linux-gnu.dependencies]
zbus = "5.15.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_System_Power"] }
